--- a/main.css
+++ b/main.css
@@ -3,5 +3,77 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(166, 207, 193);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
+#calculator{
+    width: 200px;
+    background-color: rgb(24, 24, 24);
+    border: 1px solid black;
+    box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.322);
+    padding: 5px;
+}
+
+#display{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+#displayInput{
+    border: none;
+    width: 100%;
+    text-align: center;
+    color: white;
+    background-color: rgb(24, 24, 24);
+}
+
+#keyboard{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2px;
+}
+
+button{
+    padding: 10px 0;
+    border: none;
+    border-radius: 5%;
+    font-size: 1.2rem;
+    cursor: pointer;
+    background-color: rgb(85, 85, 85);
+}
+
+
+.num, .point{
+    color: white;
+    transition: all .2s;
+}
+.num:hover, .point:hover{
+    background-color: rgb(54, 54, 54)
+}
+
+.operator{
+    color: orange;
+    background-color: rgb(54, 54, 54);
+    transition: all .2s;
+}
+.operator:hover{
+    background-color: rgb(85, 85, 85);
+}
+
+.equal{
+    color: black;
+    background-color: rgb(45, 94, 134);
+    transition: all .2s;
+}
+.equal:hover{
+    background-color: rgb(40, 75, 104);
+}
